<resources>
    <string name="app_name">Yazılım Geliştirme Topluluğu</string>
    <string name="e_posta">E-posta</string>
    <string name="password">Şifre</string>
    <string name="password2">Şifre(tekrar)</string>
    <string name="forgot_password">Şifremi unuttum ?</string>
    <string name="new_associate">Yeni Üyemisin ?</string>
    <string name="register_now">Şimdi Kayıt Ol</string>
    <string name="or">veya</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nick_name">Kullanıcı Adı</string>
    <string name="old_associate">Zaten Üyemisin ?</string>
    <string name="signin_now">Giriş yap</string>
    <string name="verification">E-postanıza gelen linki \n doğruladıktan sonra giriş \n yapabilirsiniz.</string>
    <string name="check_mail">Şifrenizi değiştirmeniz\n için bir e-posta \ngönderdik!</string>
    <string name="send">Gönder</string>
    <string name="register">Kayıt Ol</string>
    <string name="welcome">HOŞGELDİNİZ !!!</string>
    <string name="okey">ok</string>
    <string name="home">Anasayfa</string>
    <string name="members">Üyeler</string>
    <string name="gallery">Galeri</string>
    <string name="chat">Sohbet</string>
    <string name="profile">Profil</string>
    <string name="welcome_message">Gerekli evrakları topluluğumuza\n teslim ettikten sonra profiliniz\n aktifleştirilecektir</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="date_of_birth">Doğum Tarihi</string>
    <string name="man">Erkek</string>
    <string name="woman">Kız</string>
    <string name="department">Bölüm</string>
    <string name="area">Alan</string>
    <string name="classs">Sınıf</string>
    <string name="biography">Özgeçmiş</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="save">kaydet</string>
    <string name="remember_password">Şifremi Hatırladım</string>
    <string name="error">HATA\n\nLütfen farklı bir e-posta deneyin!</string>
    <string name="comments">YORUMLAR</string>
    <string name="empty_info">Bu duyuruya henüz yorum yapılmamış.İlk yorumu\nyapmak ister misiniz?</string>
    <string name="member_status_info">Üyeliğiniz Aktif Değil !</string>
    <string name="member_status_info2">Bu sayfaya ulaşmanız için üyeliğinizin aktif olması gerekmektedir.Evraklarınızı teslim ettiyseniz en kısa zamanda aktif edilecektir.</string>

</resources>